opam-version: "2.0"
version: "0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/yummy"
dev-repo: "git://github.com/kit-ty-kate/yummy.git"
bug-reports: "https://github.com/kit-ty-kate/yummy/issues"
tags: ["parser" "generator" "yaml"]
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "menhir" {build & >= "20181113"}
]
synopsis: "A parser and generator library for a simple subset of YAML"
